--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -50,7 +50,10 @@
           </li>
           <li>
             <a href="market-history.html" class="market-history text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
-              Market History
+              <span class="flex gap-x-3 items-center justify-center">
+                Market History
+                <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">New</span>
+              </span>
             </a>
           </li>
         </ul>
@@ -60,13 +63,13 @@
         <ul role="list" class="-mx-2 mt-2 space-y-1">
           <li>
             <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.jpg" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
-              <span class="flex shrink-0 px-1.5 items-center justify-center rounded-lg border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
+              <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
               <span class="truncate">JPG File</span>
             </a>
           </li>
           <li>
             <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.pdf" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
-              <span class="flex shrink-0 px-1.5 items-center justify-center rounded-lg border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
+              <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
               <span class="truncate">PDF File</span>
             </a>
           </li>
