Add new table for buildings, add description and title for every page

--- a/site/contributions.ejs
+++ b/site/contributions.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Contributions'}) %>
   <body class="h-full contributions">
     <%- include('../components/mobile-navigation.ejs') %>
 
