--- a/site/squad-coins.ejs
+++ b/site/squad-coins.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Squad Coins'}) %>
   <body class="h-full squad-coins">
     <%- include('../components/mobile-navigation.ejs') %>
 
