--- a/site/unit-effects.ejs
+++ b/site/unit-effects.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Unit Effects'}) %>
   <body class="h-full unit-effects">
     <%- include('../components/mobile-navigation.ejs') %>
 
