--- a/site/yonder-yacht.ejs
+++ b/site/yonder-yacht.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Yonder Yacht'}) %>
   <body class="h-full yonder-yacht">
     <%- include('../components/mobile-navigation.ejs') %>
 
