--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -4,56 +4,75 @@
       <li>
         <ul role="list" class="-mx-2 space-y-1">
           <li>
-            <a href="index.html" class="tierlist text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="index.html" class="tierlist cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Tierlist
             </a>
           </li>
           <li>
-            <a href="changelog.html" class="changelog text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="changelog.html" class="changelog cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Changelog
             </a>
           </li>
           <li>
-            <a href="contributions.html" class="contributions text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="contributions.html" class="contributions cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Contributions
             </a>
           </li>
           <li>
-            <a href="squad-coins.html" class="squad-coins text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="squad-coins.html" class="squad-coins cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Squad Coins
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">How many squad coins do I need to level up my heroes?</span>
             </a>
           </li>
           <li>
-            <a href="yonder-yacht.html" class="yonder-yacht text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="yonder-yacht.html" class="yonder-yacht cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Yonder Yacht
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">Retirement Exchange Rate</span>
             </a>
           </li>
           <li>
-            <a href="ascension-system.html" class="ascension-system text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="ascension-system.html" class="ascension-system cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Ascension System
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">How many units do i need for maximum ascension?</span>
             </a>
           </li>
           <li>
-            <a href="training-camp.html" class="training-camp text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="training-camp.html" class="training-camp cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Training Camp
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">Training camp level, their production costs and the yield.</span>
             </a>
           </li>
           <li>
-            <a href="unit-effects.html" class="unit-effects text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
-              Unit Effects
+            <a href="unit-effects.html" class="unit-effects cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+              <span class="flex gap-x-3 items-center justify-center">
+                Unit Effects
+                <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">WIP</span>
+              </span>
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">About units and their skill effects or counter.</span>
             </a>
           </li>
           <li>
-            <a href="troop-infos.html" class="troop-infos text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="troop-infos.html" class="troop-infos cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Troop Infos
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">An overview of the talents and number of units.</span>
             </a>
           </li>
           <li>
-            <a href="market-history.html" class="market-history text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="market-history.html" class="market-history cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               <span class="flex gap-x-3 items-center justify-center">
                 Market History
                 <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">New</span>
               </span>
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">We're taking bets on when the next WW will be available...</span>
+            </a>
+          </li>
+          <li>
+            <a href="buildings.html" class="buildings cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+              <span class="flex gap-x-3 items-center justify-center">
+                Buildings
+                <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">New</span>
+              </span>
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">How much do building updates cost and how long do they take.</span>
             </a>
           </li>
         </ul>
@@ -62,13 +81,13 @@
         <div class="text-xs font-semibold leading-6 uppercase text-gray-400">Download tierlist</div>
         <ul role="list" class="-mx-2 mt-2 space-y-1">
           <li>
-            <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.jpg" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.jpg" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
               <span class="truncate">JPG File</span>
             </a>
           </li>
           <li>
-            <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.pdf" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+            <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.pdf" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.1.10</span>
               <span class="truncate">PDF File</span>
             </a>
