--- a/scss/application.scss
+++ b/scss/application.scss
@@ -17,7 +17,8 @@ iframe {
 .ascension-system .ascension-system,
 .troop-infos .troop-infos,
 .unit-effects .unit-effects,
-.market-history .market-history {
+.market-history .market-history,
+.buildings .buildings {
   color: rgb(23 23 23 / var(--tw-text-opacity));
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
