--- a/site/ascension-system.ejs
+++ b/site/ascension-system.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Ascension System'}) %>
   <body class="h-full ascension-system">
     <%- include('../components/mobile-navigation.ejs') %>
 
