--- a/site/buildings.ejs
+++ b/site/buildings.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Training Camp'}) %>
-  <body class="h-full training-camp">
+  <%- include('../components/head.ejs', { title: 'Buildings'}) %>
+  <body class="h-full buildings">
     <%- include('../components/mobile-navigation.ejs') %>
 
     <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-64 lg:flex-col">
       <%- include('../components/navigation.ejs') %>
     </div>
 
-    <%- include('../components/header.ejs', { title: 'Training Camp'}) %>
+    <%- include('../components/header.ejs', { title: 'Buildings'}) %>
 
     <main class="h-full py-10 lg:pl-64">
       <div class="h-full overflow-hidden px-4 sm:px-6 lg:px-8">
         <div class="h-full overflow-hidden">
-          <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS7sYJvdVZeiCoJqml_c9UZSYciNn_2CBSj4IRCbWDQ9p9pROjxdng74764l7YupB27qtAWsiobsKs4/pubhtml?widget=true&amp;headers=false"></iframe>
+          <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRnZVg9ukO3Bs8jgcwzlhTPfx1DaMgrfmTHWmJhXpl8em5-8jRtH3JJgLH-W1Bgt8Xd6ZhfmyI18KiN/pubhtml?widget=true&amp;headers=false"></iframe>
         </div>
       </div>
     </main>
