--- a/site/changelog.ejs
+++ b/site/changelog.ejs
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Changelog'}) %>
   <body class="h-full changelog">
-    <%- include('../components/header.ejs', { title: 'Changelog'}) %>
-
     <%- include('../components/mobile-navigation.ejs') %>
 
     <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-64 lg:flex-col">
       <%- include('../components/navigation.ejs') %>
     </div>
+
+    <%- include('../components/header.ejs', { title: 'Changelog'}) %>
 
     <main class="h-full py-10 lg:pl-64">
       <div class="h-full overflow-hidden px-4 sm:px-6 lg:px-8">
