--- a/site/market-history.ejs
+++ b/site/market-history.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Market History'}) %>
   <body class="h-full market-history">
     <%- include('../components/mobile-navigation.ejs') %>
 
