--- a/site/troop-infos.ejs
+++ b/site/troop-infos.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', { title: 'Troop Infos'}) %>
   <body class="h-full troop-infos">
     <%- include('../components/mobile-navigation.ejs') %>
 
