Change description of troop infos

--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -54,7 +54,7 @@
           <li>
             <a href="troop-infos.html" class="troop-infos cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Troop Infos
-              <span class="text-[0.65rem] mb-1 leading-snug font-normal">An overview of the talents and number of units.</span>
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">Distribution of troops, their talents and upgrading skills.</span>
             </a>
           </li>
           <li>
