Add page for community links

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -18,7 +18,8 @@ iframe {
 .troop-infos .troop-infos,
 .unit-effects .unit-effects,
 .market-history .market-history,
-.buildings .buildings {
+.buildings .buildings,
+.community .community {
   color: rgb(23 23 23 / var(--tw-text-opacity));
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
