--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -19,6 +19,14 @@
             </a>
           </li>
           <li>
+            <a href="community.html" class="community cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+              <span class="flex gap-x-3 items-center justify-center">
+                Community Links
+                <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">New</span>
+              </span>
+            </a>
+          </li>
+          <li>
             <a href="squad-coins.html" class="squad-coins cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               Squad Coins
               <span class="text-[0.65rem] mb-1 leading-snug font-normal">How many squad coins do I need to level up my heroes?</span>
