Add material table

--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -90,6 +90,15 @@
               <span class="text-[0.65rem] mb-1 leading-snug font-normal">How much do building updates cost and how long do they take.</span>
             </a>
           </li>
+          <li>
+            <a href="materials.html" class="materials cursor-pointer text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+              <span class="flex gap-x-3 items-center justify-center">
+                Material Overview
+                <span class="flex h-5 w-8 shrink-0 uppercase items-center justify-center rounded-md border text-[0.5rem] font-medium bg-neutral-900 text-white bg-neutral-900 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">New</span>
+              </span>
+              <span class="text-[0.65rem] mb-1 leading-snug font-normal">Which materials do I need up to level 200.</span>
+            </a>
+          </li>
         </ul>
       </li>
       <li>
@@ -105,6 +114,17 @@
             <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/toptroops-hero-tierlist.pdf" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
               <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">2.2.2</span>
               <span class="truncate">PDF File</span>
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <div class="text-xs font-semibold leading-6 uppercase text-gray-400">Download material calculator</div>
+        <ul role="list" class="-mx-2 mt-2 space-y-1">
+          <li>
+            <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/material-calculator.xlsx" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
+              <span class="flex shrink-0 px-1.5 items-center justify-center rounded-md border text-[0.625rem] font-medium bg-white text-gray-500 border-gray-300 group-hover:border-neutral-900 group-hover:bg-neutral-900 group-hover:text-white">1.0.0</span>
+              <span class="truncate">XLSX File</span>
             </a>
           </li>
         </ul>
