--- a/scss/application.scss
+++ b/scss/application.scss
@@ -26,7 +26,8 @@ iframe {
 .market-history .market-history,
 .buildings .buildings,
 .community .community,
-.surveys .surveys {
+.surveys .surveys,
+.materials .materials {
   color: rgb(23 23 23 / var(--tw-text-opacity));
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
