--- a/components/navigation.ejs
+++ b/components/navigation.ejs
@@ -119,7 +119,7 @@
         </ul>
       </li>
       <li>
-        <div class="text-xs font-semibold leading-6 uppercase text-gray-400">Download material calculator</div>
+        <div class="text-xs font-semibold leading-6 uppercase text-gray-400">Material calculator</div>
         <ul role="list" class="-mx-2 mt-2 space-y-1">
           <li>
             <a href="https://raw.githubusercontent.com/siedlermaster/toptroops/main/assets/material-calculator.xlsx" download class="text-gray-700 hover:text-neutral-900 hover:bg-gray-100 group flex flex-wrap gap-x-3 rounded-md px-4 py-2 text-sm leading-6 font-semibold">
