Add meta descriptions, change survey to chariot

--- a/site/ascension-system.ejs
+++ b/site/ascension-system.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Ascension System'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Ascension System',
+    description: 'Legendary units such as El Bandolero in Top Troops require additional units to increase their rank. We explain the rules for this system'
+  }) %>
   <body class="h-full ascension-system">
     <%- include('../components/mobile-navigation.ejs') %>
 
