--- a/site/buildings.ejs
+++ b/site/buildings.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Buildings'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Buildings',
+    description: 'In Top Troops there are 3 other buildings besides the town hall. Here you can find the costs of the building updates, their production per hour, etc'
+  }) %>
   <body class="h-full buildings">
     <%- include('../components/mobile-navigation.ejs') %>
 
