--- a/site/changelog.ejs
+++ b/site/changelog.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Changelog'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Changelog',
+    description: 'What changes were made to the tier list and when'
+  }) %>
   <body class="h-full changelog">
     <%- include('../components/mobile-navigation.ejs') %>
 
