--- a/site/community.ejs
+++ b/site/community.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Community Links'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Community Links',
+    description: 'Links from the community of Top Troops like Reddit, Discord etc'
+  }) %>
   <body class="h-full community">
     <%- include('../components/mobile-navigation.ejs') %>
 
