--- a/site/contributions.ejs
+++ b/site/contributions.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Contributions'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Contributions',
+    description: 'The person responsible for the tier list and the countless contributors from the community of Top Troops'
+  }) %>
   <body class="h-full contributions">
     <%- include('../components/mobile-navigation.ejs') %>
 
