--- a/site/index.ejs
+++ b/site/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Home'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Home',
+    description: 'The unofficial official tier list from the community. Many different big players from the top 25 of the game Top Troops are responsible for the ranking'
+  }) %>
   <body class="h-full tierlist">
     <%- include('../components/mobile-navigation.ejs') %>
 
