--- a/site/market-history.ejs
+++ b/site/market-history.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Market History'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Market History',
+    description: 'We have been collecting the available legendary units in the Arena Shop since March 2024 and the available units in the Clan Shop since May 2024'
+  }) %>
   <body class="h-full market-history">
     <%- include('../components/mobile-navigation.ejs') %>
 
