--- a/site/materials.ejs
+++ b/site/materials.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Material Overview'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Material Overview',
+    description: 'Units in different categories of the game Top Troops require different materials. We collect these material requirements per category and per level'
+  }) %>
   <body class="h-full materials">
     <%- include('../components/mobile-navigation.ejs') %>
 
