--- a/site/squad-coins.ejs
+++ b/site/squad-coins.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Squad Coins'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Squad Coins',
+    description: 'Squad Coins are needed for leveling up the legendary and epic units in the game Top Troops. We collect the amount of coins needed per level'
+  }) %>
   <body class="h-full squad-coins">
     <%- include('../components/mobile-navigation.ejs') %>
 
