--- a/site/training-camp.ejs
+++ b/site/training-camp.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Training Camp'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Training Camp',
+    description: 'In the training camps of the game Top Troops, different units with different production costs can be trained in 20 different levels'
+  }) %>
   <body class="h-full training-camp">
     <%- include('../components/mobile-navigation.ejs') %>
 
