--- a/site/troop-infos.ejs
+++ b/site/troop-infos.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Troop Infos'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Troop Infos',
+    description: 'Everything you need to know about the units, their archetypes, the Soulstones needed to level up the skills, etc.'
+  }) %>
   <body class="h-full troop-infos">
     <%- include('../components/mobile-navigation.ejs') %>
 
