--- a/site/unit-effects.ejs
+++ b/site/unit-effects.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Unit Effects'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Unit Effects',
+    description: 'Which units in the game Top Troops trigger which effects and how can these effects best be countered if possible'
+  }) %>
   <body class="h-full unit-effects">
     <%- include('../components/mobile-navigation.ejs') %>
 
