--- a/site/yonder-yacht.ejs
+++ b/site/yonder-yacht.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Yonder Yacht'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Yonder Yacht',
+    description: 'In the game Top Troops, all units in the Rare and Common rarity can be sold in order to purchase additional items with the currency earned'
+  }) %>
   <body class="h-full yonder-yacht">
     <%- include('../components/mobile-navigation.ejs') %>
 
