--- a/components/head.ejs
+++ b/components/head.ejs
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Top Troops Tierlist - <%= title %></title>
+  <meta name="description" content="<%= description %>" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
