--- a/site/surveys.ejs
+++ b/site/surveys.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="h-full bg-white" lang="de">
-  <%- include('../components/head.ejs', { title: 'Surveys'}) %>
+  <%- include('../components/head.ejs', {
+    title: 'Surveys',
+    description: ''
+  }) %>
   <body class="h-full surveys">
     <%- include('../components/mobile-navigation.ejs') %>
 
@@ -13,7 +16,7 @@
     <main class="h-full py-10 lg:pl-64">
       <div class="h-full overflow-hidden px-4 sm:px-6 lg:px-8">
         <div class="h-full overflow-hidden">
-          <iframe class="survey" src="https://docs.google.com/forms/d/e/1FAIpQLSfO-iIXhyuUy2IhFBcnO9t9j64t4cRv_beeFrXqk5RcrpFihA/viewform?embedded=true" width="640" height="1772" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe class="survey" src="https://docs.google.com/forms/d/e/1FAIpQLScKg8iVQg8bRRAX_51Em18YxQrqHmzBAHaBCsmZ5ia--kX4fA/viewform?embedded=true" width="640" height="2155" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
     </main>
